<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern_pagina"
    android:padding="5dip" >

    <ImageView
        android:id="@+id/list_image"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:contentDescription="@string/foto"
        android:scaleType="fitXY"
        android:src="@drawable/avatar" />

    <!-- Title Of Song -->

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/list_image"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/list_image"
        android:text="@string/data"
        android:textColor="#040404"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@id/title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="1dip"
        android:layout_toLeftOf="@+id/facebook"
        android:text="@string/testo"
        android:textColor="#343434"
        android:textSize="15sp" />

    <ImageView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/list_image"
        android:layout_alignRight="@+id/title"
        android:layout_alignTop="@+id/list_image"
        android:contentDescription="@string/facebook"
        android:src="@drawable/facebook" />

</RelativeLayout>