<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pattern"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/keep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/friends"
            android:textColor="#757575"
            android:textSize="30sp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="210dp"
            android:layout_height="302dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:contentDescription="@string/enter"
            android:src="@drawable/d" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:contentDescription="@string/facebook"
        android:src="@drawable/facebook" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/facebook"
        android:text="@string/dear_diary"
        android:textAlignment="viewEnd"
        android:textColor="#fefefe"
        android:textSize="35sp"
        android:textStyle="italic" />

</RelativeLayout>