<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/pattern"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DialogOpzioni" >

    <Button
        android:id="@+id/bottoneMostra"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/pattern_pagina"
        android:padding="1dp"
        android:text="@string/mostra" />

    <Button
        android:id="@+id/bottoneModifica"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/bottoneMostra"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/pattern_pagina"
        android:padding="1dp"
        android:text="@string/modifica" />

    <Button
        android:id="@+id/bottoneCancella"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/pattern_pagina"
        android:padding="1dp"
        android:text="@string/cancella" />

</RelativeLayout>